--- a/Lesson assignment/გაკვეთილის დავალება 2/style.css
+++ b/Lesson assignment/გაკვეთილის დავალება 2/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&family=Rubik+Doodle+Shadow&display=swap');
 
 html {
-    background-color: #360707;
+    background-color: #108ee8;
     font-family: Roboto;
 }
 body, ul {
@@ -10,7 +10,7 @@ body, ul {
     list-style: none;
 }
 nav {
-    background-color: #cf1937;
+    background-color: #10d18d;
 }
 nav ul {
     display: flex;
@@ -21,7 +21,7 @@ nav ul li {
     font-size: 20px;
 }
 nav ul li a  {
-    color: #000000;
+    color:white;
     text-decoration: none;
     padding: 20px 15px;
     display: inline-block;
@@ -165,9 +165,9 @@ nav ul li a:hover {
 }
 
 .submit-button {
-    background-color: #a6c016;
+    background-color: #57c016;
     border: none;
-    color: rgb(15, 7, 7);
+    color: rgb(76, 170, 197);
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
