--- a/Html-css/day30/style3.css
+++ b/Html-css/day30/style3.css
@@ -4,7 +4,7 @@ body {
     margin-right: 10%;
 }
 header {
-    background-color: #C0C0C0;
+    background-color: #000000;
     padding: 2px;
 }
 h1 {
